# qiss

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: onpush.yml
cmake/: CompilerWarnings.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
qasm/: add.qasm  at.qasm  bool.qasm  cat.qasm  cut.qasm  dict.qasm  distinct.qasm  drop.qasm  each.qasm  f.qasm  fac.qasm  fac2.qasm  fdiv.qasm  fill.qasm  find.qasm  floor.qasm  fun.qasm  group.qasm  iasc.qasm  int.qasm  join.qasm  key.qasm  local.qasm  long.qasm  loop.qasm  match.qasm  max.qasm  minus.qasm  mul.qasm  not.qasm  null.qasm  over.qasm  prior.qasm  rand.qasm  raze.qasm  remove.qasm  rot.qasm  scan.qasm  string.qasm  sym.qasm  (+4 more)
src/: adverb.cpp  adverb.h  arith.cpp  arith.h  ast.h  at.cpp  at.h  atomic.h  avis-main.cpp  bang.cpp  bang.h  binary2unary.cpp  binary2unary.h  bits.cpp  bits.h  buddy_allocator.cpp  buddy_allocator.h  cat.cpp  cat.h  compile.cpp  compile.h  converge.cpp  converge.h  count.cpp  count.h  detect.cpp  detect.h  disassemble.cpp  disassemble.h  distinct.cpp  distinct.h  do.cpp  do.h  dollar.cpp  dollar.h  dot.cpp  dot.h  each.cpp  each.h  enlist.cpp  (+160 more)
